<resources>
    <string name="app_name">TrackForMe</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="alert_me">Alert me</string>
    <string name="zoom">Zoom</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="connect">Connect</string>
    <string name="zoom_description">Increment or decrement zooming to place selected in Search bar</string>
    <string name="radius">Radius</string>
    <string name="radius_description">Increment or decrement the radius of the Alert me circle</string>
    <string name="notifications">Notifications</string>
</resources>